--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "acorn": "^8.10.0",
     "acorn-jsx": "^5.3.2",
     "clsx": "^2.1.0",
+    "esbuild": "^0.25.6",
     "escape-string-regexp": "^5.0.0",
     "fast-glob": "^3.2.12",
     "framer-motion": "^10.15.2",
@@ -47,6 +48,7 @@
     "eslint-plugin-next-on-pages": "^1.13.12",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "sharp": "0.33.1"
+    "sharp": "0.33.1",
+    "wrangler": "^4.24.3"
   }
 }
